--- a/mbf_tools/package.xml
+++ b/mbf_tools/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mbf_tutorials</name>
+  <name>mbf_tools</name>
   <version>0.0.0</version>
-  <description>The mbf_tutorials meta package</description>
+  <description>The mbf_tools meta package</description>
 
   <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
   <license>3-Clause BSD</license>
